--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.initialization-mode = always
 spring.jpa.hibernate.ddl-auto=update
+
+#Ermöglicht es Portübergreifend zu agieren
+spring.webflux.cors.allowed-origins=http://localhost:3000
