--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ build/
 .vscode/
 src/main/resources/importfiles/company/RND_Stammdaten_032023.xlsx
 src/main/resources/files_from_work/company/RND_Stammdaten_032023.xlsx
+/src/main/resources/importfiles/uploads/
