--- a/.github/workflows/ubuntu_run_tests.yml
+++ b/.github/workflows/ubuntu_run_tests.yml
@@ -1,16 +1,16 @@
-name: Ubuntu Test
-
-on: [ push ]
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
-      - name: Test with Maven
-        run: mvn clean test
+#name: Ubuntu Test
+#
+#on: [ push ]
+#jobs:
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v3
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#          distribution: 'temurin'
+#          cache: maven
+#      - name: Test with Maven
+#        run: mvn clean test
