--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ build/
 src/main/resources/importfiles/company/RND_Stammdaten_032023.xlsx
 src/main/resources/files_from_work/company/RND_Stammdaten_032023.xlsx
 /src/main/resources/importfiles/uploads/
+src/main/resources/importfiles/testfiles/~$RND_Std_032023_sample.xlsx
