--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-logging.level.root=DEBUG
+logging.level.root=INFO
 spring.data.mongodb.uri=mongodb+srv://mdbroot:r00t4m0ng0db@cluster4solutions.vc73cl1.mongodb.net/dbidentifier?retryWrites=true&w=majority
 spring.webflux.cors.allowed-origins=http://localhost:3000
