--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
 			<artifactId>maven-resources-plugin</artifactId>
 			<version>3.3.1</version>
 		</dependency>
+        <!-- https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.10.1</version>
+        </dependency>
+
+
 
 
     </dependencies>
