--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
+    "xslx": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
