--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 #logging.level.root=INFO
 spring.data.mongodb.uri=mongodb+srv://mongodbuser:CoDeRsBaY1@cluster4solutions.vc73cl1.mongodb.net/dbidentifier?retryWrites=true&w=majority
 spring.webflux.cors.allowed-origins=http://localhost:3000
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
